Vertical alignment fix for iOS

--- a/app/input/input-common.css
+++ b/app/input/input-common.css
@@ -54,4 +54,5 @@ Label.disabled {
   font-size: 22;
   color: #fff;
   vertical-align: center;
+  margin-right: 8;
 }
